[gd_scene load_steps=2 format=3 uid="uid://d4ivs6wlnusij"]

[ext_resource type="Script" uid="uid://q40e3evtovc7" path="res://simple_fill_game.gd" id="1_h2yge"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_h2yge")

[node name="EditUI" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="EditUI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -30.0
offset_top = 8.0
offset_right = 30.0
offset_bottom = 40.0
grow_horizontal = 2
pivot_offset = Vector2(0.5, 0)
size_flags_horizontal = 4

[node name="Button" type="Button" parent="EditUI/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "读取"

[node name="Restart" type="Button" parent="EditUI/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
focus_mode = 0
text = "重置"

[node name="Steps" type="Label" parent="EditUI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 68.0
offset_top = 12.0
offset_right = 150.0
offset_bottom = 35.0
grow_horizontal = 2
text = "123"

[node name="LoadDialog" type="FileDialog" parent="EditUI"]
auto_translate_mode = 1
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.txt")

[node name="ColorPalette" type="VBoxContainer" parent="EditUI"]
layout_direction = 2
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -116.0
offset_right = -54.0
offset_bottom = 57.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[connection signal="button_up" from="EditUI/HBoxContainer/Button" to="." method="_on_load_pressed"]
[connection signal="button_up" from="EditUI/HBoxContainer/Restart" to="." method="_on_restart_button_up"]
